--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
+    "popper": "^1.0.1",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -31,6 +35,7 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.16",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
